--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,31 +1,20 @@
-name: Docker-GCP
+name: Omop_On_FHIR_Workflow
 on:
   push:
     branches:
     - main
   pull_request:
 env:
-  GKE_CLUSTER: github-actions-gke
-  GKE_ZONE: us-central1-c
-  DEPLOYMENT_NAME: github-actions-gke
-  IMAGE: github-actions-gke-image
   TAG: 1.0.0
 jobs:
-  setup-build-publish-deploy:
-    name: Setup Build Publish Deploy
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: self-hosted
     steps:
+    - uses: actions/checkout@v2
+    
+    - name: Build docker image
+      run:  docker build -t omoponfhir . 
 
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Create Network
+      run:  docker run --name omoponfhir --network=omop -p 8080:8080 -d omoponfhir:latest
 
-      - name: Setup JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-          server-id: github
-          settings-path: ${{ github.workspace }}
-
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
