--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,8 +13,28 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Build docker image
+      id: build_image
       run:  docker build -t omoponfhir . 
+    
+    - name: Stop docker container if already existing
+      id: stop_container
+      run:  docker container stop omoponfhir
+      - name: Check on failures
+        if: steps.stop_container.outcome != 'success' 
+        run: echo "Failed to stop container. It may not running already"
+    
+    - name: Remove docker container if already existing
+      id: remove_container
+      run:  docker container rm omoponfhir
+      - name: Check on failures
+        if: steps.remove_container.outcome != 'success' 
+        run: echo "Failed to remove container. It may not exist already"
 
     - name: Create Network
+      id: create_network
       run:  docker run --name omoponfhir --network=omop -p 8080:8080 -d omoponfhir:latest
+      continue-on-error: true
+      - name: Check on failures
+        if: steps.create_network.outcome != 'success' 
+        run: echo "Network might already exists."
 
