updated jdbc url

--- a/omoponfhir-r4-server/src/main/resources/application.properties
+++ b/omoponfhir-r4-server/src/main/resources/application.properties
@@ -13,6 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-jdbc.url=${JDBC_URL}
-jdbc.username=${JDBC_USERNAME}
-jdbc.password=${JDBC_PASSWORD}
+jdbc.url=jdbc:postgresql://localhost:5432/omop
+jdbc.username=omop_v6
+jdbc.password=password
