updated jdbc url

--- a/omoponfhir-r4-server/src/main/resources/application.properties
+++ b/omoponfhir-r4-server/src/main/resources/application.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 ###############################################################################
 jdbc.url=jdbc:postgresql://localhost:5432/omop
-jdbc.username=omop_v6
+jdbc.username=postgres
 jdbc.password=password
