--- a/omoponfhir-r4-server/src/main/resources/application.properties
+++ b/omoponfhir-r4-server/src/main/resources/application.properties
@@ -13,6 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-jdbc.url=jdbc:postgresql://localhost:5432/omop
+jdbc.url=jdbc:postgresql://192.168.86.40:5432/omop
 jdbc.username=postgres
 jdbc.password=password
