--- a/omoponfhir-r4-server/src/main/webapp/WEB-INF/web.xml
+++ b/omoponfhir-r4-server/src/main/webapp/WEB-INF/web.xml
@@ -98,6 +98,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>fhirServlet</servlet-name>
-		<url-pattern>/fhir/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 </web-app>
